docs/0.19/_sources/modeling/gallery/spatial/plot_template.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "modeling/gallery/spatial/plot_template.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_spatial_plot_template.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spatial_plot_template.py:


.. _template-spatial-model:

Template spatial model
======================

This is a spatial model based on a 2D sky map provided as a template.

.. GENERATED FROM PYTHON SOURCE LINES 11-14

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 14-31

.. code-block:: default


    from gammapy.maps import Map
    from gammapy.modeling.models import (
        Models,
        PowerLawSpectralModel,
        SkyModel,
        TemplateSpatialModel,
    )

    filename = "$GAMMAPY_DATA/catalogs/fermi/Extended_archive_v18/Templates/RXJ1713_2016_250GeV.fits"

    m = Map.read(filename)
    m.unit = "sr^-1"
    model = TemplateSpatialModel(m, filename=filename)

    model.plot(add_cbar=True)




.. image-sg:: /modeling/gallery/spatial/images/sphx_glr_plot_template_001.png
   :alt: plot template
   :srcset: /modeling/gallery/spatial/images/sphx_glr_plot_template_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /Users/adonath/software/mambaforge/envs/gammapy-dev/lib/python3.9/site-packages/astropy/wcs/wcs.py:483: FITSFixedWarning: RADECSYS= 'FK5' 
    the RADECSYS keyword is deprecated, use RADESYSa.
      wcsprm = _wcs.Wcsprm(header=header_bytes, key=key,
    /Users/adonath/software/mambaforge/envs/gammapy-dev/lib/python3.9/site-packages/astropy/wcs/wcs.py:707: FITSFixedWarning: 'celfix' made the change 'Success'.
      warnings.warn(




.. GENERATED FROM PYTHON SOURCE LINES 32-35

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 35-43

.. code-block:: default


    pwl = PowerLawSpectralModel()
    template = TemplateSpatialModel(m, filename=filename)

    model = SkyModel(spectral_model=pwl, spatial_model=template, name="pwl-template-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Template file already exits, and overwrite is False
    components:
    -   name: pwl-template-model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        spatial:
            type: TemplateSpatialModel
            frame: fk5
            parameters: []
            filename: /Users/adonath/github/gammapy/gammapy-data/catalogs/fermi/Extended_archive_v18/Templates/RXJ1713_2016_250GeV.fits
            normalize: true
            unit: 1 / sr






.. _sphx_glr_download_modeling_gallery_spatial_plot_template.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_template.py <plot_template.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_template.ipynb <plot_template.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
